--- a/voronoi.html
+++ b/voronoi.html
@@ -6,6 +6,8 @@
   <script type="text/javascript">//<![CDATA[
     "use strict";
 
+    const SCALING_FACTOR = window.devicePixelRatio;
+
     window.addEventListener("load", function () {
       document.querySelectorAll(".voronoi").forEach((vor) => {
         const canvas = vor.querySelector("canvas");
@@ -77,7 +79,7 @@
           const rect = canvas.getBoundingClientRect();
           const x = evt.clientX - rect.left;
           const y = evt.clientY - rect.top;
-          canvas.points.push(canvas.getPoint(x * window.devicePixelRatio, y * window.devicePixelRatio));
+          canvas.points.push(canvas.getPoint(x * SCALING_FACTOR, y * SCALING_FACTOR));
           canvas.isDrawn ? canvas.fillAreas() : canvas.drawPoints(true);
         });
         canvas.addEventListener("dragover", (evt) => {evt.preventDefault();});
@@ -106,9 +108,9 @@
 
             canvas.width = hid.width;
             canvas.height = hid.height;
-            if (window.devicePixelRatio !== 1) {
-              canvas.style.width = (canvas.width / window.devicePixelRatio) + "px";
-              canvas.style.height = (canvas.height / window.devicePixelRatio) + "px";
+            if (SCALING_FACTOR !== 1) {
+              canvas.style.width = (canvas.width / SCALING_FACTOR) + "px";
+              canvas.style.height = (canvas.height / SCALING_FACTOR) + "px";
             }
             canvas.imageBmp = imgBmp;
             canvas.image = imgData;
@@ -175,11 +177,11 @@
     })
 
     function resizeCanvas(canvas) {
-      if (window.devicePixelRatio !== 1) {
+      if (SCALING_FACTOR !== 1) {
         canvas.style.width = canvas.width + "px";
         canvas.style.height = canvas.height + "px";
-        canvas.width *= window.devicePixelRatio;
-        canvas.height *= window.devicePixelRatio;
+        canvas.width *= SCALING_FACTOR;
+        canvas.height *= SCALING_FACTOR;
       }
     }
 
