Default to single thread

--- a/voronoi.html
+++ b/voronoi.html
@@ -21,8 +21,8 @@
 
         //canvas.fillAreas = fillAreasBrute;
         //canvas.fillAreas = fillAreasBruteParallel;
-        //canvas.fillAreas = fillAreasGrid;
-        canvas.fillAreas = fillAreasGridParallel;
+        canvas.fillAreas = fillAreasGrid;
+        //canvas.fillAreas = fillAreasGridParallel;
 
         canvas.pixelMap = createPixelMap(canvas.height, canvas.width);
 
