--- a/voronoi.html
+++ b/voronoi.html
@@ -3,10 +3,11 @@
 <head>
   <title>Voronoi Generator</title>
   <script type="text/javascript" src="parallelWorkers.js"></script>
+  <script type="text/javascript" src="delaunator.min.js"></script>
   <script type="text/javascript">//<![CDATA[
     "use strict";
 
-    const SCALING_FACTOR = window.devicePixelRatio * 4;
+    const SCALING_FACTOR = window.devicePixelRatio;
 
     window.addEventListener("load", function () {
       document.querySelectorAll(".voronoi").forEach((vor) => {
@@ -21,8 +22,9 @@
 
         //canvas.fillAreas = fillAreasBrute;
         //canvas.fillAreas = fillAreasBruteParallel;
-        canvas.fillAreas = fillAreasGrid;
+        //canvas.fillAreas = fillAreasGrid;
         //canvas.fillAreas = fillAreasGridParallel;
+        canvas.fillAreas = fillRegionsDelauney;
 
         canvas.pixelMap = createPixelMap(canvas.height, canvas.width);
 
@@ -163,7 +165,7 @@
 
         
         colorBtn.addEventListener("click", (evt) => {
-          canvas.points.forEach((point) => { point.colorArray = randomColor(); });
+          canvas.points.forEach((point) => { point.colorArray = randomColor(); point.color = colorFromArray(point.colorArray); });
           canvas.fillAreas();
         });
 
@@ -480,6 +482,105 @@
       this.drawPoints();
     }
 
+    function fillRegionsDelauney() {
+      this.ctx.clearRect(0, 0, this.width, this.height);
+      this.ctx.lineWidth = 2;
+
+      const startTime = new Date();
+
+      const drawCircle = (c, r) => {
+        this.ctx.beginPath();
+        this.ctx.arc(c.x, c.y, r, 0, 2 * Math.PI);
+        this.ctx.stroke();
+      }
+
+      const delauney = Delaunator.from(this.points, p => p.x, p => p.y);
+
+      const triPoints = delauney.triangles;
+      const triangles = [];
+      const vorRegions = Array(this.points.length).fill(null).map(() => []);
+      this.ctx.fillStyle = "red";
+      this.ctx.strokeStyle = "black";
+      for(let i = 0; i < triPoints.length; i += 3) {
+        const coords = [this.points[triPoints[i]], this.points[triPoints[i + 1]], this.points[triPoints[i + 2]]];
+        const a = {x: (coords[0].x + coords[1].x)/2, y: (coords[0].y + coords[1].y)/2};
+        const u = {x: coords[0].y - coords[1].y, y: coords[1].x - coords[0].x};
+        const b = {x: (coords[0].x + coords[2].x)/2, y: (coords[0].y + coords[2].y)/2};
+        const v = {x: coords[0].y - coords[2].y, y: coords[2].x - coords[0].x};
+        const t = (u.x === 0) ? (b.x - a.x - ((b.y - a.y) * u.x) / u.y) / ((v.y * u.x) / u.y - v.x) : (b.y - a.y - ((b.x - a.x) * u.y) / u.x) / ((v.x * u.y) / u.x - v.y);
+        const circumcenter = {x: b.x + t * v.x, y: b.y + t * v.y};
+        const triangle = {coords, circumcenter};
+        triangles.push(triangle);
+        vorRegions[triPoints[i]].push(triangle);
+        vorRegions[triPoints[i+1]].push(triangle);
+        vorRegions[triPoints[i+2]].push(triangle);
+        
+        // this.ctx.beginPath();
+        // this.ctx.moveTo(coords[0].x, coords[0].y);
+        // this.ctx.lineTo(coords[1].x, coords[1].y);
+        // this.ctx.lineTo(coords[2].x, coords[2].y);
+        // this.ctx.closePath();
+        // this.ctx.stroke();
+        // this.ctx.fillRect(circumcenter.x - 1, circumcenter.y - 1, 3, 3);
+      }
+
+      // Add points at infinity
+      for(let i = 0; i < delauney.hull.length; i++) {
+        const cur = delauney.hull[i];
+        const next = i != delauney.hull.length - 1 ? delauney.hull[i + 1] : delauney.hull[0];
+
+        const curPoint = this.points[cur];
+        const nextPoint = this.points[next];
+
+        const triangle = vorRegions[cur].find(t => t.coords.includes(nextPoint) && !t.fake);
+
+        const c = triangle.circumcenter;
+        const mid = {x: (nextPoint.x - curPoint.x)/2 + curPoint.x, y: (nextPoint.y - curPoint.y)/2 + curPoint.y};
+        let diff = {x: mid.x - c.x, y: mid.y - c.y};
+
+        if(triangleSign(c, curPoint, nextPoint) >= 0) {
+          diff.x = -diff.x;
+          diff.y = -diff.y;
+        }
+
+        const inf = {x: c.x + 1000 * diff.x, y: c.y + 1000 * diff.y};
+
+        const fake = {circumcenter: inf, fake: true};
+
+        vorRegions[cur].push(fake);
+        vorRegions[next].push(fake);
+      }
+
+      this.ctx.strokeStyle = "black";
+      const drawRegion = (region, i) => {
+        const point = this.points[i];
+        const fixRegion = region.map(t => ({...t.circumcenter, angle: Math.atan2((t.circumcenter.y - point.y),(t.circumcenter.x - point.x))}))
+        fixRegion.sort((a, b) => {
+          return a.angle - b.angle;
+        })
+        this.ctx.fillStyle = point.color;
+        //this.ctx.strokeStyle = point.color;
+        this.ctx.beginPath();
+        fixRegion.forEach((circumcenter, j) => {
+          if(j === 0) {
+            this.ctx.moveTo(circumcenter.x, circumcenter.y)
+          }
+          else {
+            this.ctx.lineTo(circumcenter.x, circumcenter.y)
+          }
+        });
+        this.ctx.closePath();
+        this.ctx.stroke();
+        this.ctx.fill();
+      };
+      vorRegions.forEach(drawRegion);
+
+      if (!this.image) this.drawPoints();
+
+      const elapsed = (new Date()) - startTime;
+      console.log(`${elapsed / 1000}s`);
+    }
+
     function findClosestPoint(points, x, y) {
       let closestPoint = null;
       let closestDist = -1;
@@ -524,10 +625,10 @@
       return Math.sqrt(sqDistanceTo(ax, ay, bx, by));
     }
 
-    function lerp(x, y, a) {return x * (1 - a) + y * a;}
-    function clamp(a, min = 0, max = 1) {return Math.min(max, Math.max(min, a));}
-    function invlerp(x, y, a) {return clamp((a - x) / (y - x));}
-    function range(x1, y1, x2, y2, a) {return lerp(x2, y2, invlerp(x1, y1, a));}
+    function triangleSign(p1, p2, p3)
+    {
+      return (p1.x - p3.x) * (p2.y - p3.y) - (p2.x - p3.x) * (p1.y - p3.y);
+    }
 
     function randomChannel() {
       return Math.floor(Math.random() * 0x100);
