Add submodules for 2dshader and parallelWorkers

--- a/glMandelbrot.html
+++ b/glMandelbrot.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>WebGL Mandelbrot</title>
-        <script type="text/javascript" src="2dshader.js"></script>
-        <script type="text/javascript" src="parallelWorkers.js"></script>
+        <script type="text/javascript" src="2DShader/2dshader.js"></script>
+        <script type="text/javascript" src="parallelWorkers/parallelWorkers.js"></script>
         <script type="text/javascript">
             "use strict";
 
