--- a/glVoronoi.html
+++ b/glVoronoi.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Voronoi Generator</title>
-    <script type="text/javascript" src="2dshader.js"></script>
+    <script type="text/javascript" src="2DShader/2dshader.js"></script>
     <script type="text/javascript">//<![CDATA[
         "use strict";
 
