--- a/voronoi.html
+++ b/voronoi.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Voronoi Generator</title>
-  <script type="text/javascript" src="parallelWorkers.js"></script>
+  <script type="text/javascript" src="parallelWorkers/parallelWorkers.js"></script>
   <script type="text/javascript" src="delaunator.min.js"></script>
   <script type="text/javascript">//<![CDATA[
     "use strict";
