Change default algorithm

--- a/voronoi.html
+++ b/voronoi.html
@@ -22,9 +22,9 @@
 
         //canvas.fillAreas = fillAreasBrute;
         //canvas.fillAreas = fillAreasBruteParallel;
-        //canvas.fillAreas = fillAreasGrid;
+        canvas.fillAreas = fillAreasGrid;
         //canvas.fillAreas = fillAreasGridParallel;
-        canvas.fillAreas = fillRegionsDelauney;
+        //canvas.fillAreas = fillRegionsDelauney;
 
         if(canvas.fillAreas === fillAreasGrid) {
           canvas.pixelMap = createPixelMap(canvas.height, canvas.width);
